Fixed logo on mobile and added hover states to button and icons

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -72,9 +72,12 @@ button {
   padding: 15px 75px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   margin: 1em 0;
+  transition-duration: 0.4s;
 
   &:hover {
     cursor: pointer;
+    color: #fff;
+    background-color: hsl(298, 65%, 59%);
   }
 }
 
@@ -83,6 +86,7 @@ button {
   display: flex;
   justify-content: flex-end;
   list-style: none;
+  transition-duration: 0.4s;
 
   a {
     border-radius: 50%;
@@ -95,13 +99,18 @@ button {
     height: 40px;
     width: 40px;
     text-decoration: none;
+    transition-duration: 0.4s;
+
+    &:hover {
+      color: hsl(298, 65%, 59%);
+      background-color: #fff;
+    }
   }
 }
 
 @media only screen and (max-width: 768px) {
   .flex {
     flex-direction: column;
-    margin: 50px;
   }
   h1 {
     font-size: 1.4rem;
@@ -114,7 +123,6 @@ button {
   }
   p {
     font-size: 1rem;
-    
   }
   .image {
     flex: 1;
